syntax = "proto3";
package models;

message MatchDay {

  int32 id = 1;
  int32 tournament_id = 2;

  string name = 3;
}
